<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eb42ede2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.rocketship.natrapharmutil.LandingActivity">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/container_logo"
        android:layout_width="match_parent"
        app:layout_heightPercent="20%"
        android:gravity="center_horizontal"
        app:layout_marginBottomPercent="5%"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/natrapharm_logo"
            app:layout_widthPercent="15%"
            android:layout_height="match_parent"
            android:src="@drawable/logo1"
            android:layout_centerHorizontal="true"
            app:layout_marginRightPercent="3%"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Natrapharm"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="#292929"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/natrapharm_logo"
            android:layout_toEndOf="@+id/natrapharm_logo" />

    </android.support.percent.PercentRelativeLayout>



    <android.support.percent.PercentRelativeLayout
        android:id="@+id/container_controller"
        app:layout_widthPercent="50%"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/container_logo"
        android:layout_centerHorizontal="true">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_menu"
            app:layout_widthPercent="30%"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="10%"
            app:layout_marginBottomPercent="10%"
            app:layout_marginRightPercent="10%"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="match_parent"
                app:layout_heightPercent="55%"
                android:src="@drawable/app_white"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:id="@+id/tv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_marginTopPercent="1%"
                android:textColor="#ffffff"
                android:text="@string/home"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_below="@id/iv_menu" />

        </android.support.percent.PercentRelativeLayout>

        <View
            android:id="@+id/view_divider"
            app:layout_widthPercent="1%"
            app:layout_heightPercent="55%"
            android:background="#ffffff"
            app:layout_marginPercent="10%"
            android:layout_toRightOf="@id/rl_menu"/>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_profile"
            app:layout_widthPercent="30%"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="10%"
            app:layout_marginBottomPercent="10%"
            app:layout_marginLeftPercent="10%"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@id/view_divider">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                app:layout_heightPercent="55%"
                android:src="@drawable/profile_white"
                tools:ignore="ContentDescription,RtlHardcoded"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_marginTopPercent="1%"
                android:textColor="#ffffff"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_below="@id/iv_profile" />

        </android.support.percent.PercentRelativeLayout>

    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_controller"
        app:layout_marginTopPercent="12%"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_quality"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_marginRightPercent="1%"
            android:text="@string/quality"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_sincere"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_marginRightPercent="1%"
            android:layout_toRightOf="@id/tv_quality"
            android:text="@string/sincere"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_reliable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_sincere"
            android:text="@string/reliable"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>
